# python-qa-project

./: README.rst  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  usage.rst
test1/: fibonacci.py  main.py
tests/: test_test1.py
