[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["David (DDT) Tillemans <david.tillemans@cryptable.org>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pylama = "^8.4.1"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test1 = "test1.main:main"